[project]
name = "with-keepass"
dynamic = ["version"]
authors = [
  { name="Emilio Reyes", email="soda480@gmail.com" },
]
description = "A command-line utility that allows you to run any command with environment variables automatically injected from a KeePass database."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pykeepass"
]

[project.scripts]
with-keepass = "with_keepass:__main__.main"

[project.urls]
"Homepage" = "https://github.com/soda480/with-keepass"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "radon",
    "bandit",
    "coverage",
    "twine"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "with_keepass.__version__"}